fix text alignment

--- a/src/components/exercisesForm/exercisesForm.css
+++ b/src/components/exercisesForm/exercisesForm.css
@@ -277,6 +277,7 @@
 .no-exercises p {
   font-size: 1.2rem;
   margin-bottom: -1rem;
+  text-align: center;
 }
 
 .no-exercises p:last-child {
